Tue Dec 06 13:28:32 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/omegascript.rst: Add note to discourage use of percentage
	  scores.
	* templates/query: Don't show the percentage score in the default
	  template.

Tue Dec 06 13:26:30 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac,runfilter.cc: If we don't get any data from a filter
	  for 5 minutes, give up - it has probably ended up blocked
	  indefinitely.

Tue Dec 06 12:51:24 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* templates/query: HTML escape topterms.
	* templates/godmode: HTML escape the contents of document values.

Tue Dec 06 12:48:24 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* scriptindex.cc: MyHtmlParser::parse_html() no longer throws bool to
	  stop parsing early, so we no longer need to catch it.

Tue Dec 06 12:45:48 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Sync changes from xapian-core: Don't pass -Wshadow for
	  GCC < 4.1; don't pass -Wstrict-null-sentinel for GCC 4.0.x; only
	  enable symbol visibility on platforms where it is supported; remove
	  now superfluous check for GCC >= 3.  Also, add FIXME for enabling
	  -Woverloaded-virtual.

Tue Dec 06 11:57:58 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* scriptindex.cc: Add link to
	  http://xapian.org/docs/omega/scriptindex.html to --help output (and
	  so also to the man page which is generated from this).

Tue Dec 06 11:30:42 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* omega.cc: If P had trailing spaces, we would remove all but one -
	  fixed to remove all of them!

Thu Sep 01 12:31:59 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* xapian-omega.spec.in: Package outlookmsg2html helper.

Wed Aug 10 06:13:41 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Finalise 1.2.7.
